--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
             class="titulo-destaque">com um Front-end de qualidade!
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora
+            <p class="apresentacao__conteudo__texto">Olá! Sou Pedro Aniceto, desenvolvedor
             Front-end com especialidade em React, HTML e
             CSS. Ajudo pequenos negócios e designers a
             colocarem em prática boas ideias. Vamos
             conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__navegacao" href="https://github.com/rafaballerini">
+                <a class="apresentacao__links__navegacao" href="https://github.com/pedrohaniceto">
                     <img src="./assets/github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/rafaellaballerini">
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/pedro-henrique-aniceto-silva-0b4ba2b1/">
                     <img src="./assets/linkedin.png">
                     linkedin
                 </a>
@@ -45,7 +45,7 @@
         <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Alura.</p>
+        <p>Desenvolvido por Pedro Aniceto.</p>
     </footer>
 </body>
 
