--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
-            class="titulo-destaque">com um Front-end de qualidade!
-            </strong></h1>
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque"> com um Front-end de qualidade! </strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Pedro Aniceto, desenvolvedor
             Front-end com especialidade em React, HTML e
             CSS. Ajudo pequenos negócios e designers a
